# rse-toolbox

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/rse_toolbox/: io.py
src/rse_toolbox/llms/: __init__.py  dataset.py  download.py  quantize.py  utilities.py
src/rse_toolbox/llms/olmo/: convert.py  utilities.py
