[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rse-toolbox"
dynamic = ["version"]
description = "A toolbox for working with research software and models."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "torch",
  "fsspec"
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "ipywidgets",
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "pytest-mock",
    "pytest-xdist",
    "pytest-benchmark",
    "pre-commit",
]
llms = [
  "transformers>=4.40,<5",
  "huggingface-hub>=0.21.4,<1",
  "accelerate>=0.30.0,<1",
]
olmo = [
  "rse-toolbox[llms]",
  "ai2-olmo>=0.3.0"
]
all = [
  "rse-toolbox[dev,llms,olmo]",
]

[project.urls]
Homepage = "https://github.com/uw-ssec/rse-toolbox"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/rse_toolbox/version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.sdist]
exclude = [
  "/tests",
]